src/test/deca/context/invalid/homemade/tests/test26_nom_deja_pris/test36_nom_deja_pris2.deca
// test invalide de la règle 2.6

class A extends B {
    void val(){};
    int val(){};
}